--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
   --bg: #171717;
   --drk: #333;
   --w-f: 100%;
-  --round-one: #00ff00;
+  --round-one: #ff9900;
   --round-two: #00c0b5;
   --light: var(--white);
   --frm: #888;
@@ -67,7 +67,6 @@ a {
 }
 /* basic styles end */
 
-
 .q {
   top: -131px !important;
   height: 200px !important;
@@ -78,31 +77,9 @@ a {
   left: -15px;
   top: -128px;
 }
-.slke {
-  height: 500px !important;
-  width: 500px !important;
-}
-.cursor {
-  height: 60px;
-  width: 60px;
-  border: 2px solid var(--light);
-  border-radius: 50%;
-  position: absolute;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  pointer-events: none;
-  -webkit-transform-origin: 100% 100%;
-  -ms-transform-origin: 100% 100%;
-  transform-origin: 100% 100%;
-  -webkit-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-  z-index: 999999 !important;
-  -webkit-transition-property: background, height, width;
-  -o-transition-property: background, height, width;
-  transition-property: background, height, width;
-  mix-blend-mode: difference;
+.slke,
+.skl-crd {
+  width: 49% !important;
 }
 .bgn {
   background: url(assets/chess.png) no-repeat;
@@ -110,14 +87,11 @@ a {
   width: 100%;
   background-size: cover;
 }
-.link-grow {
-  -webkit-transform: scale(2);
-  -ms-transform: scale(2);
-  transform: scale(2);
-  background-color: var(--light);
-}
 .aa {
   height: 80px !important;
+}
+.asea {
+  display: flex;
 }
 .hm-inr {
   position: relative;
@@ -128,22 +102,25 @@ a {
 }
 .haders,
 .contant {
-  background-color: #00000020 !important;
+  background-color: #0000008f !important;
   backdrop-filter: blur(20px) !important;
 }
 .contant {
   padding: 30px 20px;
   border-radius: 20px;
-  max-width: 600px;
+  max-width: 860px;
   margin: 50px auto;
   color: #fff;
   font-family: "Poppins", sans-serif;
 }
-
+.txt-s {
+  font-size: 1.5rem;
+  display: grid;
+  place-content: center;
+  height: 100%;
+}
 .nav {
   padding: 20px 5% !important;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   width: 100%;
   height: 100%;
@@ -152,26 +129,22 @@ a {
   top: 0px;
 }
 .cmp-nam {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
+
   justify-content: center;
   height: 100%;
 }
 .navs-links {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+
   align-items: center;
   margin: 0px auto;
   font-family: "Poppins", sans-serif;
+}
+.navbar-collapse {
+  position: relative;
 }
 #min {
   min-height: 100vh;
@@ -188,11 +161,8 @@ a {
   overflow: hidden;
   position: relative;
   min-height: 100%;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
-  -ms-flex-wrap: wrap !important;
-  flex-wrap: nowrap !important;
+  flex-wrap: nowrap;
   gap: 50px;
   padding: 10px !important;
   background-color: var(--drk);
@@ -212,11 +182,8 @@ a {
   left: 150px !important;
 }
 .lft-s {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+
   align-items: center;
   width: 40%;
   height: 100%;
@@ -272,12 +239,9 @@ input::file-selector-button:hover {
   object-fit: cover;
 }
 .inp-inr {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 12px;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
+
   -ms-flex-direction: column;
   flex-direction: column;
 }
@@ -289,12 +253,9 @@ input::file-selector-button:hover {
   border-radius: 10px;
 }
 .rgt-sc-in {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   height: 100%;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
+
   flex-direction: column;
   -ms-flex-direction: column;
   gap: 5rem;
@@ -371,30 +332,17 @@ input::file-selector-button:hover {
   border-radius: 12px;
   height: 100%;
   width: 100%;
-
   border: 2px dotted var(--frm);
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
   flex-direction: column;
   -ms-flex-direction: column;
   gap: 20px;
 }
 .cmp,
 .cmps {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
   flex-direction: column;
   -ms-flex-direction: column;
   font-size: 1.7rem;
@@ -404,11 +352,7 @@ input::file-selector-button:hover {
   font-family: "Playfair Display", serif;
 }
 .hro-ctt {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
   width: var(--w-f);
@@ -443,17 +387,13 @@ input::file-selector-button:hover {
   color: #00c0b5;
 }
 .cnt-btn {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding: 15px;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
+
   justify-content: center;
   background-color: transparent;
   height: auto;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+
   align-items: center;
   max-width: 12rem;
   width: var(--w-f);
@@ -530,25 +470,18 @@ input::file-selector-button:hover {
 .bug-li {
   width: 120px;
   height: 43px;
-  display: -webkit-box;
-  display: -ms-flexbox;
+
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
+
   justify-content: center;
 }
 .bug-a {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
+
   justify-content: center;
   color: var(--light);
   border-radius: 50px;
@@ -602,34 +535,27 @@ input::file-selector-button:hover {
   opacity: 1;
 }
 .shcs-wrp {
-  /* border: 2px solid var(--drk); */
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+
   align-items: center;
   padding: 10px;
   border-radius: 12px;
-  inset: 1px;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
+  height: 350px;
+  width: auto;
 }
 .img-tlt {
   font-family: "Poppins", sans-serif;
 }
 .ddrf {
   cursor: pointer;
-  display: -webkit-box;
-  display: -ms-flexbox;
+
   display: flex;
   background-color: rgba(255, 255, 255, 0.1);
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
+
   -ms-flex-direction: column;
   flex-direction: column;
   position: relative;
+  justify-content: center;
 }
 
 .ddrf::before,
@@ -691,8 +617,6 @@ input::file-selector-button:hover {
   border: 1px solid var(--light);
 }
 .bug-inr {
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
 }
 .aro {
@@ -707,37 +631,28 @@ input::file-selector-button:hover {
   position: relative;
 }
 .hro-inr {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   flex-wrap: wrap;
   padding: 3% 5% 40px 5%;
   -ms-flex-wrap: wrap;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+
   align-items: center;
 }
 
 .lft-inr {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
+
   flex-direction: column;
   -ms-flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+
   align-items: center;
   gap: 3rem;
 }
 .lft-sc {
   width: var(--w-f);
-  display: -webkit-box;
-  display: -ms-flexbox;
+
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
+
   justify-content: center;
 }
 .cv {
@@ -787,14 +702,10 @@ input::file-selector-button:hover {
   margin-bottom: 7rem;
 }
 .shcs-skl-img {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
+
   justify-content: center;
   width: 100%;
 }
@@ -809,14 +720,11 @@ input::file-selector-button:hover {
 .shcs-li {
   height: 130px;
   width: 130px;
-  display: -webkit-box;
-  display: -ms-flexbox;
+
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
+
   justify-content: center;
 }
 .shcs-img {
@@ -825,14 +733,11 @@ input::file-selector-button:hover {
   position: relative;
 }
 .skl-crd-hld {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 24px;
   flex-wrap: wrap;
   -ms-flex-wrap: wrap;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
+
   justify-content: space-between;
 }
 .skls-inr {
@@ -843,17 +748,12 @@ input::file-selector-button:hover {
 }
 
 .nm-main {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
+
   justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
+
   flex-direction: column;
   -ms-flex-direction: column;
 }
@@ -880,20 +780,15 @@ input::file-selector-button:hover {
 
 .skls-ul {
   gap: 50px;
-  display: -webkit-box;
-  display: -ms-flexbox;
+
   display: flex;
   height: 100%;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
+
   justify-content: center;
 }
 .skls-li {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+
   align-items: center;
   padding: 0 3%;
   border-right: 3px solid var(--light);
@@ -929,16 +824,10 @@ input::file-selector-button:hover {
   font-family: "Poppins", sans-serif;
 }
 .crd-sc {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
+  margin: 0 auto;
   justify-content: space-between;
   gap: 24px;
 }
@@ -953,20 +842,19 @@ input::file-selector-button:hover {
 }
 .srv-crd {
   height: 400px;
-  min-width: 350px;
-  max-width: 500px;
   display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
   border-radius: 20px;
   overflow: hidden;
+  width: 32%;
   background-color: var(--drk);
+}
+.dd {
+  width: auto;
+  height: auto;
+  padding: 20px;
 }
 .img-gry-n {
   -webkit-filter: invert(100%);
@@ -975,11 +863,9 @@ input::file-selector-button:hover {
 .srv-crd-inr {
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
+
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
+
   -ms-flex-direction: column;
   flex-direction: column;
 }
@@ -987,17 +873,18 @@ input::file-selector-button:hover {
   padding: 0 30px;
 }
 .srv-top {
-  width: var(--w-f);
-  display: -ms-grid;
+  width: 100%;
   display: grid;
   border-radius: 5px 5px 0px 0px;
   place-items: center;
   padding: 10px;
   color: var(--light);
-  height: 35%;
-  margin: 10px;
+  height: auto;
+  margin: 10px 0px;
   margin-bottom: 50px;
-  border-bottom: 3px solid var(--light);
+}
+.dxs-top {
+  border-bottom: 3px solid #000;
 }
 .code-b {
   overflow: hidden;
@@ -1059,22 +946,16 @@ input::file-selector-button:hover {
 .git-bg {
   width: 100%;
   padding: 3% 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   text-align: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+  margin-bottom: 90px;
   align-items: center;
   position: relative;
 }
 .git-inr-min {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
+
   display: flex;
   height: 100%;
   place-content: center;
@@ -1099,11 +980,8 @@ input::file-selector-button:hover {
   border-radius: 10px;
 }
 .git-info-inr {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+
   align-items: center;
   -ms-flex-pack: distribute;
   justify-content: space-around;
@@ -1195,15 +1073,11 @@ input::file-selector-button:hover {
   color: var(--light);
 }
 .ftr-inr {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   flex-wrap: wrap;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+
   align-items: center;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
+
   justify-content: space-between;
   -ms-flex-wrap: wrap;
   gap: 60px;
@@ -1212,28 +1086,15 @@ input::file-selector-button:hover {
   font-size: 2rem;
 }
 .ftr-rgt-inr {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
   gap: 7rem;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
 .flw-inr {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
   gap: 12px;
@@ -1247,31 +1108,23 @@ input::file-selector-button:hover {
   width: 35px;
   height: 35px;
   border-radius: 50px;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
+
   justify-content: center;
   color: var(--light);
-  display: -webkit-box;
-  display: -ms-flexbox;
+
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+
   align-items: center;
   border: 2px solid var(--light);
 }
 .mil-s {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 12px;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+
   align-items: center;
   color: var(--light);
 }
 .mk-num {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 12px;
   color: var(--light);
@@ -1285,8 +1138,8 @@ input::file-selector-button:hover {
 }
 .skl-crd {
   border-radius: 20px;
-  height: 400px;
-  width: 350px;
+  height: 550px;
+  width: 42%;
   overflow: hidden;
   background-color: var(--drk);
   position: relative;
@@ -1296,21 +1149,39 @@ input::file-selector-button:hover {
   text-decoration: underline;
 }
 .skl-crd-inr {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   position: relative;
   height: var(--w-f);
   width: var(--w-f);
 }
-.skl-top {
+.srv-ico {
+  border-radius: 50px;
+  height: 100px;
+  width: 100px;
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.dsx {
+  background-color: transparent;
+}
+.srv-ico > img {
+  margin: 0;
+}
+.srv-ico .skl-top {
+  margin-top: 20px;
   height: 75%;
   width: 100%;
   position: relative;
   background-color: transparent;
 }
+.crd-p {
+  padding: 0px 50px;
+  color: #fff;
+}
 .ifrm {
-  height: 100%;
+  height: 80%;
   width: 100%;
   -o-object-fit: contain;
   object-fit: contain;
@@ -1338,21 +1209,15 @@ input::file-selector-button:hover {
   text-align: center;
 }
 .skl-bottom-inr {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 6px;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
+
   justify-content: space-between;
 }
 .skl-bottom-lft {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 12px;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+
   align-items: center;
 }
 .btm-h {
@@ -1368,19 +1233,38 @@ input::file-selector-button:hover {
   height: 50px;
   width: 50px;
   background-color: var(--drk);
-  display: -webkit-box;
-  display: -ms-flexbox;
+
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+
   align-items: center;
   padding: 10px;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
+
   justify-content: center;
 }
 .fv-img {
   height: 100%;
+}
+
+@media only screen and (max-width: 1200px) {
+  .navs-uls {
+    flex-wrap: wrap;
+    font-size: 14px;
+  }
+  .contant {
+    max-width: 1200px;
+  }
+  .nm {
+    font-size: 14px;
+  }
+  .srv-top {
+    height: auto;
+  }
+  .crd-sc {
+    width: 100%;
+  }
+  .srv-crd {
+    width: 31%;
+  }
 }
 @media only screen and (max-width: 600px) {
   .git-inr {
@@ -1394,22 +1278,26 @@ input::file-selector-button:hover {
   }
   .nav {
     gap: 25px;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
   }
   .navbar-collapse {
-    -webkit-box-align: center !important;
-    -ms-flex-align: center !important;
     align-items: center !important;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
     gap: 24px;
+  }
+}
+
+@media only screen and (max-width: 991px) {
+  .navbar-collapse {
+    align-items: center;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin-top: 20px;
+    padding: 10px;
+    border-bottom: 1px solid #fff;
   }
 }
 
@@ -1418,13 +1306,30 @@ input::file-selector-button:hover {
     padding: 35% 0px 0px 0px;
     position: relative;
   }
+  .rgt-scc {
+    padding: 10px 5%;
+  }
+  .ds {
+    font-size: 2.5rem;
+  }
+  .lft-s {
+    width: 100%;
+  }
+  .rgt-txt {
+    font-size: 2rem;
+  }
+  .top-w,
+  .bug-min-ul,
+  .bug-inr {
+    flex-wrap: wrap;
+  }
   .skl-crd-hld,
   .crd-sc {
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
   }
-
+  .bk-upld-btn {
+    width: 102px;
+  }
   .pra {
     max-width: 380px;
   }
@@ -1448,7 +1353,7 @@ input::file-selector-button:hover {
     grid-template-columns: repeat(auto-fill, 320px);
   }
   .git-info-inr {
-    -ms-flex-wrap: wrap;
+    flex-direction: column;
     flex-wrap: wrap;
   }
   .git-inr {
@@ -1458,14 +1363,11 @@ input::file-selector-button:hover {
     width: 90%;
   }
   .ftr-inr {
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
   }
   .ftr-rgt-inr {
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
+    gap: 6rem;
   }
   .ccd {
     text-align: center;
@@ -1500,6 +1402,12 @@ input::file-selector-button:hover {
   }
   .cmp-nam {
     justify-content: flex-start !important;
+  }
+  .srv-top {
+    margin-bottom: 20px;
+  }
+  .crd-p {
+    padding: 0px;
   }
 }
 @media only screen and (max-width: 800px) and (min-width: 375px) and (orientation: landscape) {
@@ -1568,6 +1476,9 @@ input::file-selector-button:hover {
     align-items: center;
     gap: 0px;
   }
+  .crd-sc {
+    width: 90%;
+  }
   .srv-crd {
     min-width: 500px;
     height: 520px;
@@ -1581,8 +1492,8 @@ input::file-selector-button:hover {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
+
     justify-content: center;
+    width: 100%;
   }
 }
